# smth2smth

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/augment/: none.yaml  strong.yaml  tsm_track_a.yaml
configs/data/: default.yaml
configs/experiment/: baseline_from_scratch.yaml  baseline_pretrained.yaml  track_a_tsm_from_scratch.yaml
configs/model/: avanced_resnet50_tsm.yaml  cnn_baseline.yaml  cnn_lstm.yaml
configs/track/: a.yaml  b.yaml
configs/train/: default.yaml
docs/: architecture.md
multirun/2026-04-28/02-16-55/: multirun.yaml
multirun/2026-04-28/02-16-55/0/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/2026-04-28/02-18-25/: multirun.yaml
multirun/2026-04-28/16-46-40/: multirun.yaml
notebooks/: 01_dataset_overview.ipynb  02_preprocessing_check.ipynb  03_train_curves.ipynb  04_error_analysis.ipynb  05_track_comparison.ipynb  README.md
notebooks/.ipynb_checkpoints/: 01_dataset_overview-checkpoint.ipynb  02_preprocessing_check-checkpoint.ipynb
report/: parity.md
scripts/: compare_submissions.py  download_data.py  overnight.sh  run_track_a.py  run_track_b.py  show_runs.py
src/smth2smth/: __init__.py
src/smth2smth/pipelines/: __init__.py  evaluate.py  submit.py  train.py
src/smth2smth/shared/: __init__.py
src/smth2smth/shared/data/: __init__.py  transforms.py  video_dataset.py
src/smth2smth/shared/engine/: __init__.py  metrics.py  trainer.py
src/smth2smth/shared/io/: __init__.py  checkpoints.py  submission.py
src/smth2smth/shared/models/: __init__.py  avanced_resnet50_tsm.py  cnn_baseline.py  cnn_lstm.py  registry.py
src/smth2smth/shared/utils/: __init__.py  seed.py  splits.py
src/smth2smth/track_a/: __init__.py
src/smth2smth/track_b/: __init__.py
submissions/: track_a.csv  track_a_exp5_strong_lr1e-4.csv  track_b_best_lr5e-05.csv
tests/pipelines/: test_smoke_end_to_end.py
tests/scripts/: test_compare_submissions.py
tests/shared/data/: conftest.py  test_transforms.py  test_video_dataset.py
tests/shared/engine/: test_metrics.py  test_trainer.py
tests/shared/io/: test_checkpoints.py  test_submission.py  test_submission_validator.py
tests/shared/models/: test_registry.py
(+40 files in other folders)
